methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:8: error: not found: value k
        k match{
        ^